[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Hangar.gd" type="Script" id=1]
[ext_resource path="res://Textures/1x1 lightgray.png" type="Texture" id=2]
[ext_resource path="res://Textures/pixel_auto_niebieski.png" type="Texture" id=3]
[ext_resource path="res://Textures/dzialko_2.png" type="Texture" id=4]
[ext_resource path="res://Textures/dziako.pnh.png" type="Texture" id=5]

[sub_resource type="GDScript" id=1]

script/source = "extends TextureRect

# class member variables go here, for example:
# var a = 2
# var b = \"textvar\"

func _ready():
	set_process(true)

func _process(delta):
	rect_min_size = Vector2((get_viewport_rect().size.y -100) /5, (get_viewport_rect().size.y -1) /5)
	
"

[sub_resource type="GDScript" id=2]

script/source = "extends TextureButton

# class member variables go here, for example:
# var a = 2
# var b = \"textvar\"

func _ready():
	pass

func _on_TextureButton_mouse_entered():
	get_parent().self_modulate = Color(\"ffffff\")


func _on_TextureButton_mouse_exited():
	get_parent().self_modulate = Color(\"d2d2d2\")


func _on_TextureButton_button_down():
	pass # replace with function body


func _on_TextureButton_button_up():
	pass # replace with function body


func _on_TextureButton2_mouse_entered():
	get_parent().self_modulate = Color(\"ffffff\")


func _on_TextureButton2_mouse_exited():
	get_parent().self_modulate = Color(\"d2d2d2\")


func _on_TextureButton2_button_down():
	pass # replace with function body


func _on_TextureButton2_button_up():
	pass # replace with function body
"

[node name="Hangar" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Size Flags" ]

[node name="ButtonPanel" type="Control" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 300.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Visibility" ]

[node name="TextureRect" type="TextureRect" parent="ButtonPanel"]

self_modulate = Color( 0.823529, 0.823529, 0.823529, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Visibility" ]

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonPanel"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="TextureButton" type="TextureRect" parent="ButtonPanel/VBoxContainer"]

self_modulate = Color( 0.823529, 0.823529, 0.823529, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
script = SubResource( 1 )
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Textures", "Visibility" ]

[node name="TextureButton" type="TextureButton" parent="ButtonPanel/VBoxContainer/TextureButton"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5
script = SubResource( 2 )
_sections_unfolded = [ "Material", "Textures", "Visibility" ]

[node name="TextureButton2" type="TextureRect" parent="ButtonPanel/VBoxContainer"]

self_modulate = Color( 0.823529, 0.823529, 0.823529, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 304.0
margin_right = 300.0
margin_bottom = 604.0
rect_min_size = Vector2( 0, 300 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
script = SubResource( 1 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="TextureButton" type="TextureButton" parent="ButtonPanel/VBoxContainer/TextureButton2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
script = SubResource( 2 )
_sections_unfolded = [ "Focus", "Hint", "Material", "Mouse", "Rect", "Textures", "Visibility" ]

[node name="TextureButton3" type="TextureRect" parent="ButtonPanel/VBoxContainer"]

self_modulate = Color( 0.823529, 0.823529, 0.823529, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 608.0
margin_right = 300.0
margin_bottom = 908.0
rect_min_size = Vector2( 0, 300 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
script = SubResource( 1 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="TextureButton" type="TextureButton" parent="ButtonPanel/VBoxContainer/TextureButton3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
script = SubResource( 2 )
_sections_unfolded = [ "Focus", "Hint", "Material", "Mouse", "Rect", "Textures", "Visibility" ]

[node name="TextureButton4" type="TextureRect" parent="ButtonPanel/VBoxContainer"]

self_modulate = Color( 0.823529, 0.823529, 0.823529, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 912.0
margin_right = 300.0
margin_bottom = 1212.0
rect_min_size = Vector2( 0, 300 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
script = SubResource( 1 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="TextureButton" type="TextureButton" parent="ButtonPanel/VBoxContainer/TextureButton4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5
script = SubResource( 2 )
_sections_unfolded = [ "Focus", "Hint", "Material", "Mouse", "Rect", "Textures", "Visibility" ]

[node name="TextureButton5" type="TextureRect" parent="ButtonPanel/VBoxContainer"]

self_modulate = Color( 0.823529, 0.823529, 0.823529, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1216.0
margin_right = 300.0
margin_bottom = 1516.0
rect_min_size = Vector2( 0, 300 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
script = SubResource( 1 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="TextureButton" type="TextureButton" parent="ButtonPanel/VBoxContainer/TextureButton5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5
script = SubResource( 2 )
_sections_unfolded = [ "Focus", "Hint", "Material", "Mouse", "Rect", "Textures", "Visibility" ]

[node name="ItemSelect Panel" type="Control" parent="."]

modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 294.0
margin_right = 594.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Hint", "Rect", "Visibility" ]

[node name="Panel" type="Panel" parent="ItemSelect Panel"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ScrollContainer" type="ScrollContainer" parent="ItemSelect Panel"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal = true
scroll_vertical = true

[node name="VBoxContainer" type="VBoxContainer" parent="ItemSelect Panel/ScrollContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Stats Panel" type="Control" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 594.0
margin_top = 697.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Anchor", "Hint", "Rect", "Size Flags" ]

[node name="Panel" type="Panel" parent="Stats Panel"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = 3.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="VehicleView Panel" type="Control" parent="."]

modulate = Color( 0.03125, 0, 1, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 594.0
margin_right = 1920.0
margin_bottom = 697.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Visibility" ]

[node name="Panel" type="Panel" parent="VehicleView Panel"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[connection signal="button_down" from="ButtonPanel/VBoxContainer/TextureButton/TextureButton" to="ButtonPanel/VBoxContainer/TextureButton/TextureButton" method="_on_TextureButton_button_down"]

[connection signal="button_up" from="ButtonPanel/VBoxContainer/TextureButton/TextureButton" to="ButtonPanel/VBoxContainer/TextureButton/TextureButton" method="_on_TextureButton_button_up"]

[connection signal="mouse_entered" from="ButtonPanel/VBoxContainer/TextureButton/TextureButton" to="ButtonPanel/VBoxContainer/TextureButton/TextureButton" method="_on_TextureButton_mouse_entered"]

[connection signal="mouse_exited" from="ButtonPanel/VBoxContainer/TextureButton/TextureButton" to="ButtonPanel/VBoxContainer/TextureButton/TextureButton" method="_on_TextureButton_mouse_exited"]

[connection signal="mouse_entered" from="ButtonPanel/VBoxContainer/TextureButton2/TextureButton" to="ButtonPanel/VBoxContainer/TextureButton2/TextureButton" method="_on_TextureButton_mouse_entered"]

[connection signal="mouse_exited" from="ButtonPanel/VBoxContainer/TextureButton2/TextureButton" to="ButtonPanel/VBoxContainer/TextureButton2/TextureButton" method="_on_TextureButton_mouse_exited"]

[connection signal="mouse_entered" from="ButtonPanel/VBoxContainer/TextureButton3/TextureButton" to="ButtonPanel/VBoxContainer/TextureButton3/TextureButton" method="_on_TextureButton_mouse_entered"]

[connection signal="mouse_exited" from="ButtonPanel/VBoxContainer/TextureButton3/TextureButton" to="ButtonPanel/VBoxContainer/TextureButton3/TextureButton" method="_on_TextureButton_mouse_exited"]

[connection signal="mouse_entered" from="ButtonPanel/VBoxContainer/TextureButton4/TextureButton" to="ButtonPanel/VBoxContainer/TextureButton4/TextureButton" method="_on_TextureButton_mouse_entered"]

[connection signal="mouse_exited" from="ButtonPanel/VBoxContainer/TextureButton4/TextureButton" to="ButtonPanel/VBoxContainer/TextureButton4/TextureButton" method="_on_TextureButton_mouse_exited"]

[connection signal="mouse_entered" from="ButtonPanel/VBoxContainer/TextureButton5/TextureButton" to="ButtonPanel/VBoxContainer/TextureButton5/TextureButton" method="_on_TextureButton_mouse_entered"]

[connection signal="mouse_exited" from="ButtonPanel/VBoxContainer/TextureButton5/TextureButton" to="ButtonPanel/VBoxContainer/TextureButton5/TextureButton" method="_on_TextureButton_mouse_exited"]


